# template-django

./: .appveyor.yml  .gitignore  .tool-versions  .travis.yml  .verchew.ini  LICENSE.txt  Makefile  Pipfile  README.md  cookiecutter.json  pyproject.toml  scent.py
.github/workflows/: main.yml
{{cookiecutter.project_name}}/: .coveragerc  .gitignore  .isort.cfg  .pycodestyle.ini  .pylint.ini  .tool-versions  .verchew.ini  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  Procfile  Procfile.dev  README.md  app.json  circle.yml  conftest.py  manage.py  pyproject.toml  pytest.ini  scent.py
{{cookiecutter.project_name}}/.circleci/: config.yml
{{cookiecutter.project_name}}/config/: urls.py  wsgi.py
{{cookiecutter.project_name}}/config/settings/: base.py  default.py  local.py  production.py  staging.py  test.py
{{cookiecutter.project_name}}/tests/: client.py  debugger.py
{{cookiecutter.project_name}}/tests/integration/: conftest.py  fixtures.py  test_api_root.py  test_apis.py
{{cookiecutter.project_name}}/tests/system/: .env  Procfile  __init__.py  conftest.py  pytest.ini  test_admin.py  test_api.py  test_site.py  test_system.py  user.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/api/: urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/core/: admin.py  helpers.py  models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/core/management/commands/: cleandata.py  gendata.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.first_app_name}}/: urls.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.first_app_name}}/tests/: test_views.py
