[tool.poetry]

description = "A template for new Django projects."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

package-mode = false

[tool.poetry.dependencies]

python = "^3.11"

cookiecutter = "*"
watchdog = "*"
pyyaml = "*" # missing dependency for 'watchdog'
argh = "*" # missing dependency for 'watchdog'
black = "^23.1"

[build-system]

requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
