[tool.poetry]

name = "{{ cookiecutter.project_name }}"
version = "0.0"
description = ""

authors = ["{{ cookiecutter.full_name }} <you@yourdomain.com>"]
license = "Unlicensed"

[tool.poetry.dependencies]

python = "^3.9"

# Django
django = "^3.2.8"
django-allauth = "*"
django-cors-headers = "*"
django-debug-toolbar = "^3.2.2"
django-grappelli = "*"

# API
djangorestframework = "~3.11"
drf-nested-routers = "*"
drf-yasg = "*"

# Storage
dj-database-url = "~0.4.2"
psycopg2-binary = "^2.6"
django-redis = "^4.12.1"

# Utilities
faker = "*"
minilog = "^2.0"

# Deployment
whitenoise = "^5.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

# Formatting
black = "=21.8b0"
isort = "=5.9.3"

# Linters
pylint = "^2.4.3"
mypy = "~0.790"

# Testing
pytest = "^6.2.5"
pytest-django = "*"
pytest-describe = "^2.0"
pytest-expecter = "^2.0"
pytest-randomly = "*"
pytest-cov = "^2.8.0"
freezegun = "*"
coverage = "^5.0"
coveragespace = "^4.0"

# Server
django-livereload-server = "*"
honcho = { git = "https://github.com/nickstenning/honcho", rev = "b4de1aa0504d41c0f05efbb04f63c624fccded81" }

# E2E
fire = "*"
splinter = "~0.16.0"

# Tooling
ipython = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
sniffer = "*"

[tool.isort]

profile = "black"

known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
